// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ClientApp]  Question Component should match snapshot with answer 1`] = `
<li
  className="CommentBox"
>
  <h1
    className="CommentBox__title mt--0 mb--d"
    data-qa-sel="comment-box-title"
  >
    Question on: 
    <span
      className="text-lowercase"
    >
      Consultation
    </span>
    <br />
  </h1>
  <p>
    <strong>
      Which areas will have the biggest impact on practice and be challenging to implement? Please say for whom and why.
    </strong>
  </p>
  <section
    role="form"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="form__group form__group--textarea mb--0"
      >
        <textarea
          className="form__input form__input--textarea"
          data-qa-sel="Comment-text-area"
          disabled={false}
          id="Answer1007"
          onChange={[Function]}
          placeholder="Enter your answer here"
          value="some answer text"
        />
      </div>
      <span
        className="ml--0 CommentBox__savedIndicator"
      >
        Saved
      </span>
      <button
        className="btn mr--0 right"
        data-qa-sel="delete-comment-button"
        onClick={[Function]}
      >
        Delete
      </button>
    </form>
  </section>
</li>
`;

exports[`[ClientApp]  Question Component should match snapshot without answer 1`] = `
<li
  className="CommentBox"
>
  <h1
    className="CommentBox__title mt--0 mb--d"
    data-qa-sel="comment-box-title"
  >
    Question on: 
    <span
      className="text-lowercase"
    >
      Consultation
    </span>
    <br />
  </h1>
  <p>
    <strong>
      Which areas will have the biggest impact on practice and be challenging to implement? Please say for whom and why.
    </strong>
  </p>
  <section
    role="form"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="form__group form__group--textarea mb--0"
      >
        <textarea
          className="form__input form__input--textarea"
          data-qa-sel="Comment-text-area"
          disabled={false}
          id="Answer-1"
          onChange={[Function]}
          placeholder="Enter your answer here"
        />
      </div>
    </form>
  </section>
</li>
`;
